HubSpot Edit: I messed up 29202, 29203 backports with incompatibilities. Can squash this, or delete in 2.7 (#167)
Co-authored-by: Ray Mattingly <rmattingly@hubspot.com>